Update and rename online.html to offline.html

--- a/offline.html
+++ b/offline.html
@@ -1,24 +1,24 @@
-<!-- online.html -->
+<!-- offline.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Offline Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #e6f7ff;
+            background-color: #f4f4f4;
             text-align: center;
             padding: 20px;
         }
         h1 {
-            color: #0066cc;
+            color: #333;
         }
     </style>
 </head>
 <body>
-    <h1>About Us</h1>
-    <p>Content related to About Us page.</p>
+    <h1>You are currently offline</h1>
+    <p>Please check your internet connection and try again.</p>
 </body>
 </html>
