--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
 
-<div id="offline-message" style="display:none; background-color: #f44336; color: white; text-align: center; padding: 10px;">
-    شما آفلاین هستید. این محتوا از کش برگرفته شده است.
-</div>
-
-<div id="main-content" style="text-align: center; padding: 20px;">
+<!-- صفحه آنلاین -->
+<div id="online-content" style="text-align: center; padding: 20px;">
     <h1>سلام! به سایت خوش آمدید</h1>
     <p>این محتوا فقط در حالت آنلاین قابل مشاهده است.</p>
+</div>
+
+<!-- صفحه آفلاین ثابت -->
+<div id="offline-content" style="text-align: center; padding: 20px; display: none;">
+    <h1>شما آفلاین هستید</h1>
+    <p>لطفاً اتصال اینترنت خود را بررسی کنید و برای به‌روزرسانی صفحه روی دکمه زیر کلیک کنید.</p>
+    <button onclick="refreshPage()">به‌روزرسانی</button>
 </div>
 
 <script>
@@ -30,27 +34,38 @@
             });
     }
 
-    // تابع نمایش/عدم نمایش پیام آفلاین
-    function showOfflineMessage() {
-        var offlineMessage = document.getElementById('offline-message');
-        offlineMessage.style.display = 'block';
+    // تابع نمایش/عدم نمایش صفحه آنلاین/آفلاین
+    function showOnlineContent() {
+        document.getElementById('online-content').style.display = 'block';
+        document.getElementById('offline-content').style.display = 'none';
     }
 
-    // تابع پنهان کردن پیام آفلاین
-    function hideOfflineMessage() {
-        var offlineMessage = document.getElementById('offline-message');
-        offlineMessage.style.display = 'none';
+    function showOfflineContent() {
+        document.getElementById('online-content').style.display = 'none';
+        document.getElementById('offline-content').style.display = 'block';
+    }
+
+    // تابع بررسی وضعیت آنلاین/آفلاین
+    function checkOnlineStatus() {
+        if (navigator.onLine) {
+            showOnlineContent();
+        } else {
+            showOfflineContent();
+        }
+    }
+
+    // تابع به‌روزرسانی صفحه
+    function refreshPage() {
+        location.reload();
     }
 
     // اضافه کردن Event Listener برای بررسی وضعیت آنلاین/آفلاین
-    window.addEventListener('online', hideOfflineMessage);
-    window.addEventListener('offline', showOfflineMessage);
+    window.addEventListener('online', checkOnlineStatus);
+    window.addEventListener('offline', checkOnlineStatus);
 
-    // اجرای تابع نمایش پیام آفلاین هنگام بارگذاری صفحه
+    // اجرای تابع بررسی وضعیت آنلاین/آفلاین هنگام بارگذاری صفحه
     document.addEventListener('DOMContentLoaded', function () {
-        if (!navigator.onLine) {
-            showOfflineMessage();
-        }
+        checkOnlineStatus();
     });
 </script>
 
