--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 <!-- صفحه آفلاین ثابت -->
 <div id="offline-content" style="text-align: center; padding: 20px; display: none;">
     <h1>شما آفلاین هستید</h1>
-    <p>لطفاً اتصال اینترنت خود را بررسی کنید و برای به‌روزرسانی صفحه روی دکمه زیر کلیک کنید.</p>
-    <button onclick="refreshPage()">به‌روزرسانی</button>
+    <p>لطفاً اتصال اینترنت خود را بررسی کنید.</p>
 </div>
 
 <script>
     // ثبت Service Worker
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('https://shoalieh.github.io/sw/service-worker.js')
+        navigator.serviceWorker.register('/service-worker.js')
             .then(function (registration) {
                 console.log('Service Worker registered with scope:', registration.scope);
             })
@@ -52,11 +51,6 @@
         } else {
             showOfflineContent();
         }
-    }
-
-    // تابع به‌روزرسانی صفحه
-    function refreshPage() {
-        location.reload();
     }
 
     // اضافه کردن Event Listener برای بررسی وضعیت آنلاین/آفلاین
