--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script>
     // ثبت Service Worker
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/service-worker.js')
+        navigator.serviceWorker.register('https://shoalieh.github.io/sw/service-worker.js')
             .then(function (registration) {
                 console.log('Service Worker registered with scope:', registration.scope);
             })
